apps/redis/redisinsight.yaml
apiVersion: v1
kind: Service
metadata:
  name: redisinsight-service
  namespace: storage
  labels:
    app: redisinsight
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 5540
      protocol: TCP
  selector:
    app: redisinsight
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redisinsight
  namespace: storage
  labels:
    app: redisinsight
spec:
  progressDeadlineSeconds: 1800
  replicas: 1
  selector:
    matchLabels:
      app: redisinsight
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  template:
    metadata:
      labels:
        app: redisinsight
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: redisinsight
          image: redis/redisinsight:3.8
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5540
              protocol: TCP
          volumeMounts:
            - name: db
              mountPath: /data
          resources:
            requests:
              cpu: 10m
              memory: 160Mi
            limits:
              memory: 320Mi
          livenessProbe:
            httpGet:
              path: /api/health/
              port: http
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /api/health/
              port: http
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
          startupProbe:
            httpGet:
              path: /api/health/
              port: http
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 180
      volumes:
        - name: db
          persistentVolumeClaim:
            claimName: redisinsight-pvc
