apps/redis/httproute-redisinsight.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: redisinsight
  namespace: storage
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "RedisInsight"
    gethomepage.dev/group: "Infrastructure"
    gethomepage.dev/icon: "redis.png"
    gethomepage.dev/description: "Redis UI"
    gethomepage.dev/pod-selector: "app=redisinsight"
spec:
  parentRefs:
    - name: cilium-gateway-local
      namespace: network
      sectionName: https-redisinsight
  hostnames:
    - redisinsight.stevevaradi.me
  rules:
    - backendRefs:
        - name: redisinsight-service
          port: 80
